--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -59,3 +59,37 @@ jobs:
 
 
       # 뒷정리 (업로드 결과 -> nginx의 root로 이동(설정), 디렉토리 정리)
+      - name: SSH로 EC2에 정리 후, 접속 및 서버가동
+        uses: appleboy/ssh-action@v1.2.0
+        # script_stop : true -> 오류나면 중단
+        # 처리할 반복적 작업
+        # 1. 기존 jar 파일 삭제 처리 (업로드 위치, 구동 위치 구분)
+        #    구동 위치 : /home/ubuntu/server/web <- 설정(가정)
+        #    rm -rf 대상 => 대상의 폴더 및 하위 파일까지 모두다 삭제
+        # 2. 새롭게 폴더 생성 /home/ubuntu/server/web
+        #    mkdir /home/ubuntu/server/web
+        # 3. jar 파일 이동 (~/demo/*.jar => ~/web/*.jar)
+        #    mv /home/ubuntu/server/demo/run.jar /home/ubuntu/server/web/run.jar
+        # 4. jar 파일이 존재하는 위치로 이동
+        #    cd /home/ubuntu/server/web
+        # 5. 서버 중단 -> 8080포트를 사용하는 프로세스 중단
+        #    sudo fuser -k -n tcp 8080 || true
+        #    무조건 다음 단계로 넘어가게 처리 (|| true)
+        # 6. 서버 구동
+        #    액세스, 에러 로그 등 전체 로그를 output.log으로 출력
+        #    nohup java -jar run.jar > ./output.log 2>&1 &
+        # 7. 뒷정리
+        #    rm -rf /home/ubuntu/server/demo
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script_stop: true
+          script: |
+            rm -rf /var/www/html
+            mkdir /var/www/html
+            mv /home/ubuntu/client/build/* /var/www/html
+            cd /var/www/html
+            sudo fuser -k -n tcp 8080 || true
+            sudo systemctl restart nginx
+            rm -rf /home/ubuntu/client/build/
