--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -86,7 +86,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script_stop: true
           script: |
-            rm -rf /var/www/html
+            sudo rm -rf /var/www/html
             mkdir /var/www/html
             mv /home/ubuntu/client/build/* /var/www/html
             cd /var/www/html
